modified:   header/book.h 	modified:   header/menu.h 	modified:   header/utilites.h 	modified:   main.c 	modified:   source/book.c 	modified:   source/escape.c 	modified:   source/menu.c 	modified:   source/utilities.c

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,32 +1,6 @@
-CC = gcc
-CFLAGS = -g -Wall
+TARGET = test
 
-# List of ..source files
-SRCS =  ../source/utilities.c ../source/error_hand.c ../source/escape.c ../source/unix_term.c ../source/menu.c
+SRC = test.c ../source/menu.c ../source/utilities.c ../source/escape.c ../source/book.c ../source/error_hand.c ../source/term.c  
 
-# Generate a list of object files by replacing .c with .o
-OBJS = $(patsubst $(SRCDIR)/%.c, $(OBJDIR)/%.o, $(SRCS))
-
-# The target executable
-TARGET = ./debug/a.out
-
-# Object directory
-OBJDIR = ~/code/test/object
-
-# ..source directory
-SRCDIR = ~/code/main/source
-
-# Rule to create the object directory
-$(shell mkdir -p $(OBJDIR))
-
-# Rule to build the executable
-$(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
-
-# Rule to build object files from ..source files
-$(OBJDIR)/%.o: $(SRCDIR)/%.c
-	$(CC) $(CFLAGS) -c $< -o $@
-
-# Clean rule
-clean:
-	rm -f $(OBJS) $(TARGET)
+$(TARGET):
+	gcc -g $(SRC) -o $(TARGET)
